--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'minem'
 include 'minem-api-protocol'
 include 'minem-api-base'
+include 'minem-common-client'
+include 'minem-common-protocol'
 
