--- a/minem-common-client/build.gradle
+++ b/minem-common-client/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     api project(":minem-api-base")
     api project(":minem-api-protocol")
     api project(":minem-common-protocol")
+    api project(":minem-common-auth")
 }
