--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'minem-common-protocol'
 include 'minem-common-auth'
 include 'minem-api-data'
 include 'minem-impl-protocol47'
+include 'minem-impl-bot-hypixel'
 
