--- a/minem-impl-bot-hypixel/build.gradle
+++ b/minem-impl-bot-hypixel/build.gradle
@@ -13,5 +13,9 @@ dependencies {
     api project(":minem-impl-protocol47")
 
     compileOnly 'org.yaml:snakeyaml:2.2'
+
     testImplementation 'org.yaml:snakeyaml:2.2'
+    testImplementation 'com.ezylang:EvalEx:3.3.0'
+    testImplementation 'net.hypixel:hypixel-api-transport-apache:4.3'
+    testImplementation 'org.apache.httpcomponents:httpclient:4.5.14'
 }
